@@ -36,24 +36,10 @@
 		<configuration>
 		  <argLine>
 		    --add-opens java.base/java.lang=spring.core
-		    --add-reads model=ALL-UNNAMED
-		    --add-reads iclij.common.config=ALL-UNNAMED
-		    --add-reads springdata=ALL-UNNAMED
-		    --add-opens springdata/roart.common.springdata.model=spring.core
-		    --add-opens springdata/roart.common.springdata.repository=spring.core
-		    --add-opens coredb.spring/roart.db.spring=spring.core
-		    --add-opens iclij.core/roart.controller=spring.core
-		    --add-opens iclij.common.config/roart.iclij.config=spring.core
-		    --add-opens common.config/roart.common.config=spring.core
-		    --add-opens db/roart.db.model=org.hibernate.orm.core
-		    --add-opens iclij.core/roart.action=spring.core
 		    --add-opens java.base/sun.nio.ch=stockstat.shadow.spark
-		    --add-opens common.communication.integration.camel/roart=ALL-UNNAMED
-		    --add-opens common.communication.integration.spring/roart=ALL-UNNAMED
-		    --add-opens common.communication.message.pulsar/roart=ALL-UNNAMED
-		    --add-opens iclij.common.service/roart.iclij.service=spring.core
-		    --add-opens pipeline.predictor/roart.predictor.impl=spring.core
 		    --add-opens java.base/sun.net=ALL-UNNAMED
+		    --add-reads springdata=ALL-UNNAMED
+		    --add-reads iclij.common.config=ALL-UNNAMED
 		  </argLine>
 		</configuration>
          </plugin>
